# piomek-os

./: CMakeLists.txt  Makefile  Makefile~  README  README.md  gdt.asm  idt.asm  kernel.asm  linker.ld  main.c  main.c~  start (kopia).s  start.asm  start.s
drives/: keyboard.c  keyboard.h  video.c  video.h
drives/.svn/: all-wcprops  entries
drives/.svn/text-base/: video.c.svn-base  video.h.svn-base
iso/boot/grub/: grub.cfg  grub.cfg~
isofiles/boot/grub/: grub.cfg
kernel/: Foo.cpp  Foo.h  commands.c  commands.h  common.c  common.h  intr.c  intr.h  kernel.c  kernel.h  primitives.h  string.c
kernel/.svn/: all-wcprops  entries
kernel/.svn/text-base/: commands.c.svn-base  commands.h.svn-base  io.c.svn-base  io.h.svn-base  kernel.c.svn-base  string.h.svn-base
src/: gdt.asm  gdt.c  gdt.h  kernel.asm  kernel.c  multiboot.asm
src/arch/x86/: gdt.c  gdt.h  idt.asm  idt.c  idt.h  idt_handlers.c  idt_handlers.h
